--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "team_sporty",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
@@ -21,6 +22,7 @@
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-logger": "^3.0.8",
     "classnames": "2.2.6",
+    "clsx": "^1.1.1",
     "eslint-plugin-react": "^7.20.0",
     "history": "^4.10.1",
     "react": "^16.13.1",
