--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "@material/ripple": "^6.0.0",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
