--- a/next/package.json
+++ b/next/package.json
@@ -22,6 +22,8 @@
     "classnames": "2.2.6",
     "clsx": "^1.1.1",
     "eslint-plugin-react": "^7.20.0",
+    "graphql": "14.5.8",
+    "graphql-tag": "2.10.1",
     "history": "^4.10.1",
     "next": "latest",
     "react": "^16.13.1",
@@ -30,9 +32,7 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
-    "redux-devtools-extension": "^2.13.8",
-    "graphql": "14.5.8",
-    "graphql-tag": "2.10.1"
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
