--- a/next/package.json
+++ b/next/package.json
@@ -7,24 +7,23 @@
     "build": "next build && gulp licenses",
     "start": "next start",
     "type-check": "tsc",
+    "generate": "gql-gen --config ../next/codegen.yml",
     "lint:fix": "./node_modules/.bin/eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@material/ripple": "^6.0.0",
     "@reduxjs/toolkit": "^1.2.5",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link-http": "^1.5.17",
     "classnames": "2.2.6",
     "clsx": "^1.1.1",
     "eslint-plugin-react": "^7.20.0",
+    "formik": "^2.1.4",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
     "history": "^4.10.1",
+    "jwt-decode": "^2.2.0",
     "next": "latest",
     "react": "^16.13.1",
     "react-datetime": "^2.16.3",
@@ -32,15 +31,24 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "@apollo/react-hooks": "^3.1.1",
+    "apollo-boost": "^0.4.4",
+    "apollo-link-token-refresh": "^0.2.6"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.16.3",
+    "@graphql-codegen/typescript": "^1.16.3",
+    "@graphql-codegen/typescript-operations": "^1.16.3",
+    "@graphql-codegen/typescript-react-apollo": "^1.16.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/classnames": "^2.2.10",
+    "@types/graphql": "^14.5.0",
     "@types/history": "^4.7.6",
     "@types/jest": "^24.0.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
