--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,6 @@
     "lib": [
       "dom",
       "es6",
-      "es2017",
       "esnext.asynciterable"
     ],
     "sourceMap": true,
@@ -16,8 +15,8 @@
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    //    "noUnusedLocals": true,
+    //    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
