--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "@typegoose/typegoose": "^7.3.0",
     "apollo-server-express": "^2.9.3",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
