--- a/next/package.json
+++ b/next/package.json
@@ -26,10 +26,12 @@
     "graphql-tag": "2.10.1",
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.27.0",
     "next": "latest",
     "react": "^16.13.1",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.13.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
