--- a/next/package.json
+++ b/next/package.json
@@ -31,6 +31,7 @@
     "react": "^16.13.1",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.0.8",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
