--- a/next/package.json
+++ b/next/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
+    "@date-io/moment": "1.x",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@material/ripple": "^6.0.0",
     "@reduxjs/toolkit": "^1.2.5",
     "apollo-boost": "^0.4.4",
@@ -31,12 +33,13 @@
     "react": "^16.13.1",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^6.0.8",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "@material-ui/lab": "4.0.0-alpha.46",
+    "react-hook-form": "5.5.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.16.3",
@@ -51,6 +54,7 @@
     "@types/history": "^4.7.6",
     "@types/jest": "^24.0.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
