--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^5.7.14",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.10",
-    "type-graphql": "^1.0.0-rc.3"
+    "type-graphql": "^1.0.0-rc.3",
+    "ts-node": "8.10.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
