--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^1.0.0-rc.3",
-    "ts-node": "8.10.2"
+    "ts-node": "8.10.2",
+    "typescript": "3.9.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -37,9 +38,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5",
-    "ts-node": "8.10.2",
-    "typescript": "3.9.6"
+    "prettier": "^2.0.5"
   },
   "author": "",
   "license": "ISC"
