--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^1.0.0-rc.3",
     "ts-node": "8.10.2",
-    "typescript": "3.9.6"
+    "typescript": "3.9.6",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.1",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.3.3",
+    "@types/mongoose": "^5.7.29",
+    "@types/node": "^14.0.14"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
