--- a/next/package.json
+++ b/next/package.json
@@ -40,7 +40,8 @@
     "react-spring": "^8.0.27",
     "redux-devtools-extension": "^2.13.8",
     "@material-ui/lab": "4.0.0-alpha.46",
-    "react-hook-form": "5.5.1"
+    "react-hook-form": "5.5.1",
+    "typescript": "3.7.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.16.3",
@@ -68,8 +69,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "prettier": "^2.0.5",
-    "typescript": "3.7.3"
+    "prettier": "^2.0.5"
   },
   "license": "ISC"
 }
