--- a/next/package.json
+++ b/next/package.json
@@ -15,6 +15,7 @@
     "@date-io/moment": "1.x",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "4.0.0-alpha.46",
     "@material-ui/pickers": "^3.2.10",
     "@material/ripple": "^6.0.0",
     "@reduxjs/toolkit": "^1.2.5",
@@ -34,13 +35,12 @@
     "react": "^16.13.1",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.13.1",
+    "react-hook-form": "5.5.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
-    "redux-devtools-extension": "^2.13.8",
-    "@material-ui/lab": "4.0.0-alpha.46",
-    "react-hook-form": "5.5.1"
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.16.3",
