--- a/next/package.json
+++ b/next/package.json
@@ -41,7 +41,8 @@
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-waypoint": "^9.0.3",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "yup": "^0.29.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.16.3",
